<resources>
    <string name="app_name">Art\'s Gym App</string>

    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="adminModeText">Admin Mode</string>
    <string name="headerTitle">Art\'s Gym App</string>
    <string name="headerSubtitle">Gym Management App</string>

    <string name="View1">HOME</string>
    <string name="View2">ADD MEMBER</string>
    <string name="View3">MEMBER LIST</string>
    <string name="View4">MEMBER TYPES</string>
    <string name="View5">EXPIRED MEMBERS</string>
    <string name="View6">RECORDS</string>
    <string name="memberList_NameEmpty">Member Name: N/A</string>
    <string name="memberList_AgeEmpty">Age: N/A</string>
    <string name="memberList_SearchMembers">Search Members ....</string>

    <string name="Identification_UpperCase">IDENTIFICATION</string>
    <string name="MemberPicture">MEMBER PICTURE</string>
    <string name="Indicates">* Indicates Required Field</string>
    <string name="Membership">MEMBERSHIP</string>
    <string name="SearchExpiredMembers">Search Expired Members ....</string>
    <string name="MemberId">MEMBER ID</string>
    <string name="FirstName">FIRST NAME</string>
    <string name="LastName">LAST NAME</string>
    <string name="MembershipType">MEMBERSHIP TYPE</string>
    <string name="ReceiptNumber">RECEIPT NUMBER</string>
    <string name="Age">AGE</string>
    <string name="Gender">GENDER</string>
    <string name="PhoneNumber">PHONE NUMBER</string>
    <string name="DeleteMember">DELETE MEMBER</string>
    <string name="ConfirmEdit">CONFIRM EDIT</string>
    <string name="CancelEdit">CANCEL EDIT</string>
    <string name="AddNewMembershipType">ADD NEW MEMBERSHIP TYPE</string>
    <string name="MembershipTypeName">Membership Type Name</string>
    <string name="MembershipDuration">Membership Duration (in days)</string>
    <string name="SaveMembershipType">SAVE MEMBERSHIP TYPE</string>
    <string name="ActiveMembershipTypes">Active Membership Types</string>
    <string name="TwoInOnePackage">Two In One Package?</string>
    <string name="StartDate">START DATE</string>
    <string name="EndDate">END DATE</string>
    <string name="Partner">PARTNER</string>
    <string name="AddMember">Add Member</string>
    <string name="RenewMembership">Renew Membership</string>
    <string name="MemberEdit">Member Edit</string>
    <string name="MemberList">Member List</string>
    <string name="Records">Records</string>
    <string name="ExpiredMembers">Expired Members</string>
    <string name="MemberTypes">Membership Types</string>
    <string name="Cancel">Cancel</string>
    <string name="Name">NAME</string>
    <string name="MembershipStarted">MEMBERSHIP STARTED ON</string>
    <string name="MembershipExpiring">MEMBERSHIP EXPIRING ON</string>
    <string name="DaysLeft">Your Monthly Membership has</string>
    <string name="Fingerprint">FINGERPRINT</string>
    <string name="RecaptureFingerprint">Recapture Fingerprint</string>
    <string name="ClearPage">CLEAR PAGE</string>
    <string name="FingerprintCaptured">Fingerprint Captured!</string>
    <string name="StartCapture">Tap to Scan Fingerprint</string>
    <string name="CapturingTemplate">Capturing Template...</string>
    <string name="PlaceFinger">Place your finger on the sensor.</string>
    <string name="FilterByMonth">Filter by Month:</string>
    <string name="ClearRecords">Clear Records</string>
    <string name="SearchMembers">Search Members</string>
    <string name="NoRecordsYet">No records yet.</string>

    <string name="renewMembership_Title">RENEW MEMBERSHIP</string>
    <string name="renewMembership_MemberInfo">MEMBER INFORMATION</string>
    <string name="renewMembership_NewReceiptNumber">New Receipt Number</string>
    <string name="renewMembership_ConfirmRenew">Confirm Renew</string>
    <string name="renewMembership_CancelRenew">Cancel Renew</string>
    <string name="renewMembership_ConfirmExistingMember">Confirm Existing Member</string>
    <string name="renewMembership_Partner">Partner</string>

    <string name="importButton">Import Data</string>
    <string name="exportButton">Export Data</string>

    <string name="hint_firstname">First Name*</string>
    <string name="hint_lastname">Last Name*</string>
    <string name="hint_age">Age*</string>
    <string name="hint_receiptnumber">Receipt Number*</string>
    <string name="hint_phonenumber">Phone Number</string>
    <string name="hint_memberId">Existing Member ID*</string>

    <string name="Expiring">Expiring</string>
    <string name="Expired">Expired</string>
    <string name="Active">Active</string>
    <string name="New">New</string>

    <string name="Home">HOME</string>

    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>

</resources>