<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_100sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/grey"
    android:orientation="vertical"
    android:paddingTop="@dimen/_15sdp"
    android:paddingStart="@dimen/_10sdp"
    android:paddingEnd="@dimen/_10sdp"
    android:gravity="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/artsGymLogo"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:src="@drawable/gymlogonobg"
            android:clickable="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_7sdp"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/headerTitle"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/headerSubtitle"
                android:layout_marginTop="@dimen/_2sdp"
                android:textSize="@dimen/_7ssp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/adminModeToggle"
        android:text="@string/adminModeText"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_2sdp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:thumbTint="@color/switch_thumb_selector"/>

</LinearLayout>